--- a/src/ru/teosa/GUI/view/MainWindow.fxml
+++ b/src/ru/teosa/GUI/view/MainWindow.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane minHeight="500.0" minWidth="500.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+<AnchorPane minHeight="500.0" minWidth="500.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
+   <children>
+      <ComboBox layoutX="34.0" layoutY="39.0" prefWidth="150.0" />
+   </children>
 </AnchorPane>
