--- a/src/ru/teosa/GUI/view/MainWindow.fxml
+++ b/src/ru/teosa/GUI/view/MainWindow.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="500.0" minWidth="500.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
+<AnchorPane minHeight="500.0" minWidth="500.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
    <children>
       <ComboBox fx:id="farms" layoutX="34.0" layoutY="39.0" prefWidth="150.0" />
+      <Button fx:id="startButton" layoutX="34.0" layoutY="149.0" mnemonicParsing="false" onAction="#startButtonHandler" text="Начать прогон" />
    </children>
 </AnchorPane>
