--- a/src/ru/teosa/GUI/view/MainWindow.fxml
+++ b/src/ru/teosa/GUI/view/MainWindow.fxml
@@ -2,12 +2,43 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane minHeight="500.0" minWidth="500.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
+<AnchorPane minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
    <children>
-      <ComboBox fx:id="farms" layoutX="34.0" layoutY="39.0" prefWidth="150.0" />
-      <Button fx:id="startButton" layoutX="34.0" layoutY="149.0" mnemonicParsing="false" onAction="#startButtonHandler" text="Начать прогон" />
-      <Button fx:id="stopButton" layoutX="158.0" layoutY="149.0" mnemonicParsing="false" onAction="#stopButtonHandler" text="Stop" />
+      <Button fx:id="startButton" layoutX="220.0" layoutY="451.0" mnemonicParsing="false" onAction="#startButtonHandler" text="Начать прогон" />
+      <Button fx:id="stopButton" layoutX="348.0" layoutY="451.0" mnemonicParsing="false" onAction="#stopButtonHandler" text="Остановить прогон" />
+      <StackPane layoutX="233.0" layoutY="190.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="30.0">
+         <children>
+            <TreeView fx:id="tree" prefHeight="472.0" prefWidth="200.0" />
+         </children>
+      </StackPane>
+      <MenuBar layoutX="205.0" layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Меню">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <VBox layoutX="220.0" layoutY="64.0" spacing="10.0">
+         <children>
+            <RadioButton fx:id="rbt1" mnemonicParsing="false" text="Свой" />
+            <RadioButton fx:id="rbt2" mnemonicParsing="false" text="Любой" />
+         </children>
+      </VBox>
+      <Label layoutX="220.0" layoutY="37.0" prefHeight="17.0" prefWidth="94.0" text="КСК" />
+      <ComboBox layoutX="309.0" layoutY="122.0" prefHeight="25.0" prefWidth="79.0" />
+      <Label layoutX="220.0" layoutY="126.0" text="Длительность" />
+      <Label layoutX="402.0" layoutY="126.0" text="дней" />
    </children>
 </AnchorPane>
