--- a/src/ru/teosa/GUI/view/ECTab.fxml
+++ b/src/ru/teosa/GUI/view/ECTab.fxml
@@ -1,45 +1,192 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="119.0" prefWidth="500.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane layoutX="28.0" layoutY="26.0" prefWidth="600.0" vgap="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <ComboBox fx:id="daysEC" layoutX="224.0" layoutY="71.0" prefHeight="25.0" prefWidth="79.0" />
-            <Label layoutX="14.0" layoutY="75.0" text="Тип КСК для записи" />
-            <Label layoutX="321.0" layoutY="75.0" text="дней" />
-            <HBox layoutX="224.0" layoutY="47.0" spacing="15.0">
+            <Label text="Запись в КСК" underline="true">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <Label text="Тип КСК для записи" GridPane.rowIndex="1">
+               <padding>
+                  <Insets left="10.0" />
+               </padding></Label>
+            <Label text="Расположение" GridPane.rowIndex="4">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <RadioButton fx:id="myEC" mnemonicParsing="false" text="Свой" />
+                  <RadioButton mnemonicParsing="false" text="Зарезервированные стойла" />
                   <RadioButton fx:id="anyEC" mnemonicParsing="false" text="Любой" />
                </children>
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
             </HBox>
-            <Label layoutX="14.0" layoutY="47.0" text="Длительность записи" />
-            <Label layoutX="14.0" layoutY="14.0" text="Запись в КСК" underline="true">
+            <ComboBox fx:id="daysEC" minWidth="80.0" prefHeight="25.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="дней" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <padding>
+                  <Insets left="90.0" />
+               </padding></Label>
+            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <RadioButton mnemonicParsing="false" text="Лес" />
+                  <RadioButton mnemonicParsing="false" text="Горы" />
+                  <RadioButton mnemonicParsing="false" text="Пляж" />
+                  <RadioButton mnemonicParsing="false" text="Любое" />
+               </children>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </HBox>
+            <Label text="Специализация" GridPane.rowIndex="5">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <children>
+                  <RadioButton mnemonicParsing="false" text="Классика" />
+                  <RadioButton mnemonicParsing="false" text="Вестерн" />
+                  <RadioButton mnemonicParsing="false" text="Любая" />
+               </children>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
+            </HBox>
+            <Label text="Преимущества" GridPane.rowIndex="6">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <GridPane vgap="2.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <CheckBox mnemonicParsing="false" text="Фураж">
+                     <GridPane.margin>
+                        <Insets right="5.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+                  <CheckBox mnemonicParsing="false" text="Овес" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+                  <CheckBox mnemonicParsing="false" text="Морковь" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+                  <CheckBox mnemonicParsing="false" text="Комбикорм" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets right="5.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+                  <CheckBox mnemonicParsing="false" text="Поилка" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+                  <CheckBox mnemonicParsing="false" text="Душ" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+               </children>
+            </GridPane>
+            <Label text="Длительность записи" GridPane.rowIndex="3">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <Label text="Продление постоя" underline="true" GridPane.rowIndex="8">
                <font>
                   <Font size="14.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
             </Label>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutY="225.0" prefHeight="111.0" prefWidth="500.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Продление постоя" underline="true">
-               <font>
-                  <Font size="14.0" />
-               </font>
+            <Label text="Оставшиеся дни" GridPane.rowIndex="9">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
             </Label>
+            <Label text="Длительность продления" GridPane.rowIndex="10">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <Label text="дней" GridPane.columnIndex="1" GridPane.rowIndex="10">
+               <padding>
+                  <Insets left="90.0" />
+               </padding>
+            </Label>
+            <ComboBox minWidth="80.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <Spinner minWidth="80.0" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label text="Продлевать только в своем КСК" GridPane.rowIndex="11">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <CheckBox mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="11" />
          </children>
-      </AnchorPane>
+      </GridPane>
    </children>
 </AnchorPane>
