--- a/src/ru/teosa/GUI/view/Login.fxml
+++ b/src/ru/teosa/GUI/view/Login.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -24,15 +24,15 @@
                </font>
             </Label>
             <Button fx:id="loginButton" layoutX="87.0" layoutY="251.0" mnemonicParsing="false" onAction="#login" prefHeight="14.0" prefWidth="116.0" text="Подключение" textAlignment="CENTER" />
-            <TextField fx:id="username" layoutX="111.0" layoutY="114.0" />
-            <TextField fx:id="password" layoutX="111.0" layoutY="148.0" />
             <Text fx:id="loginErrorMsg" fill="RED" layoutX="18.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="255.0" />
             <Label layoutX="13.0" layoutY="40.0" prefHeight="20.0" prefWidth="87.0" text="Версия сайта" textOverrun="CLIP">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <ComboBox fx:id="siteVersion" layoutX="110.0" layoutY="38.0" prefWidth="150.0" />
+            <ComboBox fx:id="siteVersion" editable="true" layoutX="110.0" layoutY="38.0" prefWidth="150.0" />
+            <PasswordField fx:id="password" layoutX="111.0" layoutY="148.0" />
+            <ComboBox fx:id="username" editable="true" layoutX="110.0" layoutY="115.0" prefWidth="150.0" visibleRowCount="5" />
          </children>
       </Pane>
    </children>
