Созданы объекты для сторов; Тип поля Логин на форме авторизации изменен на комбобокс; Подтягивание всех доступных пользователей из БД на основе выбранной версии игры; Добавление и обновление информации о юзерах; Добавлены тригеры в таблицу USERS для автоматической смены признака последнего выбранного юзера;

--- a/src/ru/teosa/GUI/view/Login.fxml
+++ b/src/ru/teosa/GUI/view/Login.fxml
@@ -30,7 +30,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <ComboBox fx:id="siteVersion" editable="true" layoutX="110.0" layoutY="38.0" prefWidth="150.0" />
+            <ComboBox fx:id="siteVersion" layoutX="110.0" layoutY="38.0" prefWidth="150.0" />
             <PasswordField fx:id="password" layoutX="111.0" layoutY="148.0" />
             <ComboBox fx:id="username" editable="true" layoutX="110.0" layoutY="115.0" prefWidth="150.0" visibleRowCount="5" />
          </children>
