--- a/src/ru/teosa/GUI/view/Login.fxml
+++ b/src/ru/teosa/GUI/view/Login.fxml
@@ -33,7 +33,7 @@
             <ComboBox fx:id="siteVersion" layoutX="110.0" layoutY="38.0" prefWidth="150.0" />
             <PasswordField fx:id="password" layoutX="111.0" layoutY="148.0" />
             <ComboBox fx:id="username" editable="true" layoutX="110.0" layoutY="115.0" prefWidth="150.0" visibleRowCount="5" />
-            <Text fx:id="version" fill="#8a8787" layoutX="185.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="11" wrappingWidth="100.0" />
+            <Text fx:id="version" fill="#8a8787" layoutX="185.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT" wrappingWidth="100.0" />
          </children>
       </Pane>
    </children>
