--- a/src/ru/teosa/GUI/view/MainWindow.fxml
+++ b/src/ru/teosa/GUI/view/MainWindow.fxml
@@ -22,17 +22,21 @@
 
 <BorderPane minHeight="500.0" minWidth="700.0" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="Меню">
-            <items>
-                  <MenuItem fx:id="convertMoney" mnemonicParsing="false" onAction="#convertMoneyHandler" text="Конвертация" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-              <MenuItem fx:id="exit" mnemonicParsing="false" text="Выход" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+      <AnchorPane maxHeight="100.0" minHeight="100.0" prefHeight="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <MenuBar prefHeight="25.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="Меню">
+                  <items>
+                        <MenuItem fx:id="convertMoney" mnemonicParsing="false" onAction="#convertMoneyHandler" text="Конвертация" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                    <MenuItem fx:id="exit" mnemonicParsing="false" text="Выход" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </children>
+      </AnchorPane>
    </top>
    <left>
       <TreeView fx:id="tree" prefHeight="472.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
