--- a/src/ru/teosa/GUI/view/MoneyConvertor.fxml
+++ b/src/ru/teosa/GUI/view/MoneyConvertor.fxml
@@ -33,15 +33,16 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Text fx:id="moneyCurBalText" layoutX="185.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="100.0" />
-            <Text fx:id="wheatCurBalText" layoutX="485.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="100.0" />
-            <TextField fx:id="moneyExpBalField" layoutX="185.0" layoutY="78.0" prefHeight="25.0" prefWidth="120.0" />
+            <Text fx:id="moneyCurBalText" layoutX="185.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="100.0" />
+            <Text fx:id="wheatCurBalText" layoutX="485.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="100.0" />
+            <TextField fx:id="moneyExpBalField" layoutX="185.0" layoutY="78.0" prefHeight="25.0" prefWidth="100.0" />
             <Label layoutX="320.0" layoutY="80.0" text="Целевой баланс, зерно">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Text fx:id="wheatExpBalText" layoutX="485.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="100.0" />
+            <Text fx:id="wheatExpBalText" layoutX="485.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="100.0" />
+            <Button fx:id="copyMoneyCurBal" layoutX="285.0" layoutY="78.0" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#copyMoneyCurBalHandler" prefHeight="25.0" prefWidth="25.0" />
       </children>
     </AnchorPane>
   </children>
