--- a/src/ru/teosa/GUI/view/MainWindow.fxml
+++ b/src/ru/teosa/GUI/view/MainWindow.fxml
@@ -1,85 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.effect.Blend?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane minHeight="500.0" minWidth="700.0" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
-   <top>
-      <AnchorPane maxHeight="100.0" minHeight="100.0" prefHeight="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <MenuBar prefHeight="25.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <menus>
-                <Menu mnemonicParsing="false" text="Меню">
-                  <items>
-                        <MenuItem fx:id="convertMoney" mnemonicParsing="false" onAction="#convertMoneyHandler" text="Конвертация" />
-                        <SeparatorMenuItem mnemonicParsing="false" />
-                    <MenuItem fx:id="exit" mnemonicParsing="false" text="Выход" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-         </children>
-      </AnchorPane>
-   </top>
-   <left>
-      <TreeView fx:id="tree" prefHeight="472.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </left>
-   <center>
-      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-        <tabs>
-          <Tab closable="false" text="Основные настройки">
-               <content>
-                  <ScrollPane prefHeight="200.0" prefWidth="200.0" />
-               </content></Tab>
-          <Tab closable="false" text="КСК">
-               <content>
-                  <ScrollPane prefHeight="200.0" prefWidth="200.0" />
-               </content></Tab>
-          <Tab closable="false" text="Разведение">
-               <content>
-                  <ScrollPane prefHeight="200.0" prefWidth="200.0" />
-               </content></Tab>
-        </tabs>
-      </TabPane>
-   </center>
+<BorderPane fx:id="mainForm" minHeight="500.0" minWidth="700.0" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.MainWindowController">
    <cursor>
       <Cursor fx:constant="DEFAULT" />
    </cursor>
    <effect>
       <Blend />
    </effect>
-   <bottom>
-      <Accordion BorderPane.alignment="CENTER">
-        <panes>
-          <TitledPane animated="false" text="Прогон">
-            <content>
-              <AnchorPane minHeight="-Infinity" prefHeight="200.0">
-                     <children>
-                        <ToolBar layoutX="29.6" nodeOrientation="RIGHT_TO_LEFT" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0">
-                           <items>
-                              <Button fx:id="startButton" mnemonicParsing="false" onAction="#startButtonHandler" text="Начать прогон" />
-                              <Button fx:id="stopButton" mnemonicParsing="false" onAction="#stopButtonHandler" text="Остановить прогон" textAlignment="CENTER" />
-                           </items>
-                        </ToolBar>
-                     </children>
-                  </AnchorPane>
-            </content>
-          </TitledPane>
-        </panes>
-      </Accordion>
-   </bottom>
 </BorderPane>
