--- a/src/ru/teosa/GUI/view/BreedingTab.fxml
+++ b/src/ru/teosa/GUI/view/BreedingTab.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="489.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="489.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.BreedingTabController">
    <children>
       <GridPane layoutX="216.0" layoutY="144.0" prefWidth="600.0" vgap="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -68,13 +68,13 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ComboBox maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ComboBox fx:id="matingPrice" maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Максимальная цена за случку" GridPane.rowIndex="6">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ComboBox maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <ComboBox fx:id="maxCoverPrice" maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Label text="Порода жеребца" GridPane.rowIndex="7">
                <padding>
                   <Insets left="10.0" />
@@ -108,14 +108,14 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-            <TextField maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="12" />
-            <TextField maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+            <ComboBox fx:id="foalsAffix" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+            <TextField fx:id="mareNames" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+            <TextField fx:id="stallonNames" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="11" />
             <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <RadioButton mnemonicParsing="false" text="1" />
-                  <RadioButton mnemonicParsing="false" text="2" />
-                  <RadioButton mnemonicParsing="false" text="3" />
+                  <RadioButton fx:id="matingQty_one" mnemonicParsing="false" text="1" />
+                  <RadioButton fx:id="matingQty_two" mnemonicParsing="false" text="2" />
+                  <RadioButton fx:id="matingQty_three" mnemonicParsing="false" text="3" />
                </children>
                <padding>
                   <Insets top="5.0" />
@@ -123,9 +123,9 @@
             </HBox>
             <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <RadioButton mnemonicParsing="false" text="Только моими" />
-                  <RadioButton mnemonicParsing="false" text="Любыми" />
-                  <Label text="жеребцами">
+                  <RadioButton fx:id="coverBy_owner" mnemonicParsing="false" text="Только моими" />
+                  <RadioButton fx:id="coverBy_any" mnemonicParsing="false" text="Любыми" />
+                  <Label fx:id="coverByLabel" text="жеребцами">
                      <padding>
                         <Insets left="20.0" />
                      </padding>
@@ -137,8 +137,8 @@
             </HBox>
             <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
-                  <RadioButton mnemonicParsing="false" text="Как у кобылы" />
-                  <RadioButton mnemonicParsing="false" text="Любая" />
+                  <RadioButton fx:id="stallonBreed_likeMare" mnemonicParsing="false" text="Как у кобылы" />
+                  <RadioButton fx:id="stallonBreed_any" mnemonicParsing="false" text="Любая" />
                </children>
                <padding>
                   <Insets top="5.0" />
@@ -146,14 +146,14 @@
             </HBox>
             <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <children>
-                  <RadioButton mnemonicParsing="false" text="Как у кобылы" />
-                  <RadioButton mnemonicParsing="false" text="Любое" />
+                  <RadioButton fx:id="stallonGP_likeMare" mnemonicParsing="false" text="Как у кобылы" />
+                  <RadioButton fx:id="stallonGP_any" mnemonicParsing="false" text="Любое" />
                </children>
                <padding>
                   <Insets top="5.0" />
                </padding>
             </HBox>
-            <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="14" />
+            <ComboBox fx:id="foalsFarm" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="14" />
             <Label text="Завод" GridPane.rowIndex="14">
                <padding>
                   <Insets left="10.0" />
