--- a/src/ru/teosa/GUI/view/RunProgrramPanel.fxml
+++ b/src/ru/teosa/GUI/view/RunProgrramPanel.fxml
@@ -2,26 +2,38 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.BorderPane?>
 
 <Accordion fx:id="accordion" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.RunProgrammController">
    <panes>
       <TitledPane animated="false" text="Прогон">
          <content>
-            <AnchorPane minHeight="-Infinity" prefHeight="200.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Test text / тест" x="20.0" y="50.0" />
-                  <ToolBar layoutX="29.6" nodeOrientation="RIGHT_TO_LEFT" AnchorPane.bottomAnchor="-10.0" AnchorPane.leftAnchor="-10.0" AnchorPane.rightAnchor="-10.0">
-                     <items>
-                        <Button mnemonicParsing="false" text="btn2" />
-                        <Button mnemonicParsing="false" text="btn1" textAlignment="CENTER" />
-                     </items>
+            <BorderPane maxHeight="250.0" minHeight="250.0" prefHeight="250.0">
+               <bottom>
+                  <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <items>
+                      <Button mnemonicParsing="false" text="Начать прогон" />
+                    </items>
                   </ToolBar>
-               </children>
-            </AnchorPane>
+               </bottom>
+               <center>
+                  <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <content>
+                        <TableView prefHeight="200.0" prefWidth="200.0">
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="C1" />
+                            <TableColumn prefWidth="75.0" text="C2" />
+                          </columns>
+                        </TableView>
+                     </content>
+                  </ScrollPane>
+               </center>
+            </BorderPane>
          </content>
       </TitledPane>
    </panes>
