--- a/src/ru/teosa/GUI/view/HerdRunSettingsTabPane.fxml
+++ b/src/ru/teosa/GUI/view/HerdRunSettingsTabPane.fxml
@@ -4,9 +4,14 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 
-<TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.HerdRunSettingsTabPaneController">
+<TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="300.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.HerdRunSettingsPaneController">
    <tabs>
       <Tab fx:id="mainInfoTab" closable="false" text="Основные настройки">
+         <content>
+            <ScrollPane prefHeight="200.0" />
+         </content>
+      </Tab>
+      <Tab fx:id="baseActionsTab" text="Базовые действия">
          <content>
             <ScrollPane prefHeight="200.0" prefWidth="200.0" />
          </content>
