--- a/src/ru/teosa/GUI/view/BaseActionsTab.fxml
+++ b/src/ru/teosa/GUI/view/BaseActionsTab.fxml
@@ -18,7 +18,7 @@
       <CheckBox fx:id="mission" layoutX="300.0" layoutY="30.0" mnemonicParsing="false" text="Миссия" />
       <CheckBox fx:id="goToSleep" layoutX="300.0" layoutY="60.0" mnemonicParsing="false" text="Отправить спать" translateX="1.0" translateY="1.0" />
       <Separator layoutY="120.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <ListView fx:id="actionsSeq" layoutX="30.0" layoutY="174.0" maxHeight="-Infinity" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="150.0" />
+      <ListView fx:id="actionsSeq" layoutX="30.0" layoutY="174.0" maxHeight="-Infinity" onMouseClicked="#handleMouseClick" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="150.0" />
       <CheckBox fx:id="manualActionsSeqSetting" layoutX="30.0" layoutY="140.0" mnemonicParsing="false" text="Ручная настройка порядка действий" underline="true">
          <font>
             <Font size="14.0" />
