--- a/src/ru/teosa/GUI/view/BreedingTab.fxml
+++ b/src/ru/teosa/GUI/view/BreedingTab.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,9 +13,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="489.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.BreedingTabController">
+<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.teosa.GUI.view.BreedingTabController">
    <children>
-      <GridPane layoutX="216.0" layoutY="144.0" prefWidth="600.0" vgap="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane fx:id="breedingTabGreed" layoutX="216.0" layoutY="144.0" prefWidth="600.0" vgap="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -22,6 +23,7 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="20.0" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -29,6 +31,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints fx:id="GPRow" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="0.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="20.0" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -50,12 +53,12 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Цена за случку" GridPane.rowIndex="2">
+            <Label text="Цена за случку" GridPane.rowIndex="3">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Кобылы" underline="true" GridPane.rowIndex="4">
+            <Label text="Кобылы" underline="true" GridPane.rowIndex="5">
                <font>
                   <Font size="14.0" />
                </font>
@@ -63,29 +66,29 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Крыть" GridPane.rowIndex="5">
+            <Label text="Крыть" GridPane.rowIndex="6">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ComboBox fx:id="matingPrice" maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="Максимальная цена за случку" GridPane.rowIndex="6">
+            <ComboBox fx:id="matingPrice" maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Максимальная цена за случку" GridPane.rowIndex="7">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ComboBox fx:id="maxCoverPrice" maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Label text="Порода жеребца" GridPane.rowIndex="7">
+            <ComboBox fx:id="maxCoverPrice" maxWidth="100.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Порода жеребца" GridPane.rowIndex="8">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="ГП жеребца" GridPane.rowIndex="8">
+            <Label text="ГП жеребца" GridPane.rowIndex="9">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Жеребята" underline="true" GridPane.rowIndex="10">
+            <Label text="Жеребята" underline="true" GridPane.rowIndex="12">
                <font>
                   <Font size="14.0" />
                </font>
@@ -93,24 +96,24 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Кличка (жеребцы)" GridPane.rowIndex="11">
+            <Label text="Кличка (жеребцы)" GridPane.rowIndex="13">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Кличка (кобылы)" GridPane.rowIndex="12">
+            <Label text="Кличка (кобылы)" GridPane.rowIndex="14">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Label text="Аффикс" GridPane.rowIndex="13">
+            <Label text="Аффикс" GridPane.rowIndex="15">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ComboBox fx:id="foalsAffix" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-            <TextField fx:id="mareNames" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="12" />
-            <TextField fx:id="stallonNames" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+            <ComboBox fx:id="foalsAffix" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="15" />
+            <TextField fx:id="mareNames" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="14" />
+            <TextField fx:id="stallonNames" maxWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="13" />
             <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <RadioButton fx:id="matingQty_one" mnemonicParsing="false" text="1" />
@@ -121,7 +124,7 @@
                   <Insets top="5.0" />
                </padding>
             </HBox>
-            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
                   <RadioButton fx:id="coverBy_owner" mnemonicParsing="false" text="Только моими" />
                   <RadioButton fx:id="coverBy_any" mnemonicParsing="false" text="Любыми" />
@@ -135,7 +138,7 @@
                   <Insets top="5.0" />
                </padding>
             </HBox>
-            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <children>
                   <RadioButton fx:id="stallonBreed_likeMare" mnemonicParsing="false" text="Как у кобылы" />
                   <RadioButton fx:id="stallonBreed_any" mnemonicParsing="false" text="Любая" />
@@ -144,21 +147,32 @@
                   <Insets top="5.0" />
                </padding>
             </HBox>
-            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <HBox spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
                <children>
                   <RadioButton fx:id="stallonGP_likeMare" mnemonicParsing="false" text="Как у кобылы" />
+                  <RadioButton fx:id="stallonGP_custom" mnemonicParsing="false" text="Указать" />
                   <RadioButton fx:id="stallonGP_any" mnemonicParsing="false" text="Любое" />
                </children>
                <padding>
                   <Insets top="5.0" />
                </padding>
             </HBox>
-            <ComboBox fx:id="foalsFarm" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="14" />
-            <Label text="Завод" GridPane.rowIndex="14">
+            <ComboBox fx:id="foalsFarm" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="16" />
+            <Label text="Завод" GridPane.rowIndex="16">
                <padding>
                   <Insets left="10.0" />
                </padding>
             </Label>
+            <Label fx:id="minStallonGPLabel" text="Мин. ГП" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <TextField fx:id="minStallonGP" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0" translateX="60.0" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <Label fx:id="maxStallonGPLabel" text="Макс. ГП" translateX="140.0" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <TextField fx:id="maxStallonGP" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0" translateX="200.0" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <Label text="Количество активных случек" GridPane.rowIndex="2">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <Spinner fx:id="maxMatingQty" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
