--- a/src/ru/teosa/GUI/view/ProgramWindow.fxml
+++ b/src/ru/teosa/GUI/view/ProgramWindow.fxml
@@ -13,7 +13,7 @@
       <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
           <Button fx:id="cancel" mnemonicParsing="false" onAction="#closeButtonHandler" text="Отмена" />
-            <Button fx:id="delete" mnemonicParsing="false" text="Удалить" />
+            <Button fx:id="delete" mnemonicParsing="false" onAction="#removeButton" text="Удалить" />
             <Button fx:id="save" mnemonicParsing="false" onAction="#saveButtonHandler" text="Сохранить" />
         </items>
       </ToolBar>
@@ -24,7 +24,7 @@
             <Label fx:id="programNamelabel" layoutX="31.0" layoutY="17.0" text="Название программы" />
             <ComboBox fx:id="programNameCombo" layoutX="185.0" layoutY="13.0" prefWidth="250.0" />
             <TextField fx:id="programNameTextField" layoutX="185.0" layoutY="13.0" prefWidth="250.0" />
-            <Button fx:id="editProgramName" layoutX="435.0" layoutY="13.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" />
+            <Button fx:id="editProgramName" layoutX="435.0" layoutY="13.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#changeProgramNameButtonHandler" prefHeight="25.0" prefWidth="25.0" />
          </children>
       </AnchorPane>
    </top>
