--- a/src/ru/teosa/GUI/view/AccountInfoPanel.fxml
+++ b/src/ru/teosa/GUI/view/AccountInfoPanel.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -33,5 +34,6 @@
       <Label layoutX="75.0" layoutY="69.0" text="Баланс экю" />
       <Text fx:id="moneyBallance" layoutX="157.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="RIGHT" wrappingWidth="130.0" />
       <Text fx:id="breederName" layoutX="157.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&lt;none&gt;" textAlignment="RIGHT" wrappingWidth="130.0" />
+      <Button fx:id="homeButton" layoutX="593.0" layoutY="47.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#homeButtonHandler" prefHeight="35.0" prefWidth="35.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="45.0" />
    </children>
 </AnchorPane>
