--- a/src/ru/teosa/GUI/view/FarmProgramInfoPanel.fxml
+++ b/src/ru/teosa/GUI/view/FarmProgramInfoPanel.fxml
@@ -16,7 +16,7 @@
             <Label fx:id="selectedFarmName" text="&lt;название завода&gt;" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="20.0" />
             <Label text="Программа" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="55.0" />
             <ComboBox fx:id="programsCombo" prefWidth="150.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="50.0" />
-            <Button fx:id="addProgramToRun" mnemonicParsing="false" text="Добавить в прогон" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
+            <Button fx:id="addProgramToRun" disable="true" mnemonicParsing="false" onAction="#addProgramToRunHandler" text="Добавить в прогон" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
             <Separator layoutX="25.0" layoutY="13.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
